--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,439 +1,410 @@
 * {
-  margin: 0px auto;
-  padding: 0px;
-  text-align: center;  
-}
-.cont_principal {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background: rgb(250,249,247);
-  background: -moz-linear-gradient(-45deg,  rgba(250,249,247,1) 0%, rgba(221,218,209,1) 100%);
-  background: -webkit-linear-gradient(-45deg,  rgba(250,249,247,1) 0%,rgba(221,218,209,1) 100%);
-  background: linear-gradient(135deg,  rgba(250,249,247,1) 0%,rgba(221,218,209,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#faf9f7', endColorstr='#dddad1',GradientType=1 );
-  background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
-.cont_centrar {
-  position: relative;
-    width: 500px;
-    height: 500px;
-    border: 1px solid #f5f9fa;
-    box-shadow: 6px 6px 20px rgb(122 122 122 / 21%);
-    border-radius: 29px;
-    padding: 40px;
-    margin-top: 30px;
- }
-
-.cont_todo_list_top {
-  position: relative;
-  float: left;
-  width: 100%;
-  height: 60px;
-  margin-top: 20px;
-  box-shadow: 1px 15px 25px -5px rgba(0,0,0,0.3);
-}
-
-.cont_titulo_cont > h3 {
-  text-spacign:2px;
-  text-align: left;
-  margin-left: 25px;
- letter-spacing:7px;
-  font-size: 12px;
-  color: #000;
-  font-weight: 400;
-  margin-top: 23px;
-  font-weight: bold;
-} 
-
-
-
-
-.cont_titulo_cont {
-  position: relative;
-  float: left;
-  width: 430px;
-  height: 60px;
-  background: rgb(42,72,107);
-/* background: -moz-linear-gradient(left,  rgba(42,72,107,1) 0%, rgba(80,122,167,1) 100%);
-background: -webkit-linear-gradient(left,  rgba(42,72,107,1) 0%,rgba(80,122,167,1) 100%);
-background: linear-gradient(to right,  rgba(42,72,107,1) 0%,rgba(80,122,167,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2a486b', endColorstr='#507aa7',GradientType=1 );
- */
- background: linear-gradient( to left top, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5) );
-  font-family: 'Open Sans', sans-serif;
-}
-
-
-.cont_add_titulo_cont {
-position: relative;
-  float: left;
-  width: 70px;
-  height: 60px;
-  background: rgb(42,72,107);
-background: -moz-linear-gradient(left,  rgba(42,72,107,1) 0%, rgba(80,122,167,1) 100%);
-background: -webkit-linear-gradient(left,  rgba(42,72,107,1) 0%,rgba(80,122,167,1) 100%);
-background: linear-gradient(to right,  rgba(42,72,107,1) 0%,rgba(80,122,167,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2a486b', endColorstr='#507aa7',GradientType=1 );
-
-}
-
-.cont_add_titulo_cont > a {
-  display: block;
-  color: #fff;
-  font-size: 32px;
-margin-top: 14px;
+html {
+    height: 100%;
 }
 
 body {
-  background: rgb(250,249,247);
-background: -moz-linear-gradient(-45deg,  rgba(250,249,247,1) 0%, rgba(221,218,209,1) 100%);
-background: -webkit-linear-gradient(-45deg,  rgba(250,249,247,1) 0%,rgba(221,218,209,1) 100%);
-background: linear-gradient(135deg,  rgba(250,249,247,1) 0%,rgba(221,218,209,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#faf9f7', endColorstr='#dddad1',GradientType=1 );
-
-}
-
-.cont_crear_new {  
-position: relative;
-  float: left;
-  width: 100%;
--webkit-transition: all 0.5s;
--o-transition: all 0.5s;
-transition: all 0.5s;
-/* Propiedades Desactivadores */
--webkit-transform: scale(0,0);
--ms-transform: scale(0,0);
--o-transform: scale(0,0);
-transform: scale(0,0);
-height: 0px;
-margin: 0px;
- 
-}
-
-.cont_crear_new_active{
--webkit-transform: scale(1);
--ms-transform: scale(1);
--o-transform: scale(1);
-transform: scale(1);
-height: 0px;
-  margin: 10px 0px;
-height: 190px;  
-}
-.cont_add_titulo_cont > a > i{
-  transition: all 0.2s;
--webkit-transition: all 0.2s;
--o-transition: all 0.2s;
-transition: all 0.2s;
-}
-.cont_add_titulo_cont_active > a > i{
--webkit-transform: rotate(130deg);
--ms-transform: rotate(130deg);
--o-transform: rotate(130deg);
-transform: rotate(130deg);
-}
-
-.table th {
-  font-size: 14px;
-  font-family: 'Open Sans', sans-serif;
-color: #607D8B;
-}
-
-.table td {
-  width: 33.33%;
-}
-.table td select {
-  width: 100%;
-  padding: 10px 0px;
-  background-color: #fff;
-box-shadow: 1px 5px 10px -5px rgba(0,0,0,0.5);
-text-align: left;
-}
-
-.table td input {
-  width: 93%;
-  padding: 10px 2%;
-  background-color: #fff;
-border: none;
-box-shadow: 1px 5px 10px -5px rgba(0,0,0,0.5);
-text-align: left;
-outline:none;
-}
-
-.btn_add_fin {
-  position: relative;
-  padding: 10px 20px;
-  background-color: #4C75A1;
-  border: none;
-  margin: 10px auto;  
-  box-shadow: 1px 5px 10px -5px rgba(0,0,0,0.5);
-color: #fff;
-cursor: pointer;
-}
-
-.titl_description {
- padding-top: 10px;
-text-align: left;
-margin-left: 6%;
-position: relative;
-float: left;
-}
-
-.display_none_add {
-  
-}
-
-.cont_princ_lists {
-  position: relative;
-  float: left;
-  width: 100%;
-margin-top: 15px;
-}
-
-.cont_princ_lists > ul > li  {
-  position: relative;
-  float: left;
-  width: 100%; 
-  height: 75px;
-  left: 0;
-  background-color: #F1F1EF;
-list-style: none;
-box-shadow: 1px 10px 20px 0px rgba(218, 215, 206,0.8);
-z-index: 2;
--webkit-transition: all 0.5s;
--o-transition: all 0.5s;
-transition: all 0.5s;
-}
-
-.col_md_1_list {
-  width: 125px;
-  position: relative;
-  float: left;
-  height: 20px;
-  top:50%;
-  margin-top: -10px;
-}
-.col_md_1_list > p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-}
-
-.col_md_2_list {
-  width: 250px;
-  position: relative;
-  float: left;
-  margin-top: 20px;
-}
-.col_md_2_list  > h4 {
-  text-align: left;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-}
-
-.col_md_2_list  > p {
-  text-align: left;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 10px;
-  font-weight: 700;
-  color: #999;
+    margin-top: 30px;
+    padding: 0;
+    background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+    color: #426696;
+    display: flex;
+    justify-content: center;
 }
 
 
-
-.col_md_3_list {
-  width: 121px;
-  position: relative;
-  float: left;
-height: 14px;
-  top:50%;
-  margin-top: -10px;
-}
-
-.col_md_3_list > .cont_text_date {
-  text-align: right;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  font-weight: 700;  
-}
-.col_md_3_list > .cont_text_date > p {
-    text-align: right;
-  margin-right: 20px;
-}
-
-.col_md_3_list:hover > .cont_btns_options{
-opacity: 1;  
-
-}
-
-.col_md_3_list > .cont_btns_options{
-  position: absolute;
-  width: 100%;
-  opacity: 0;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  background-color: #F1F1EF;
-  width: 100%;
-  height: 47px;
-  top: 0px;
-}
-
-.col_md_3_list > .cont_btns_options > ul > li{
-  position: relative;
-  float: right;
-  width: 100%;
-list-style-type: none;
-}
-.col_md_3_list > .cont_btns_options > ul > li:nth-child(1) > a {
-/*   background-color: #ef5350; */
-}
-.col_md_3_list > .cont_btns_options > ul > li > a {
-  display: block;
-  width: 20px;
-  height: 15px;
-  background-color: #4C75A1;
-  padding: 5px 3px;
-  border-radius: 50%;
-  color: #fff;
-  margin-top: -5px;
-}
-
-.col_md_3_list > .cont_btns_options > ul > li > a > i {
-  font-size: 15px;
-}
-
-.list_dsp_none {
-  display: none;
-opacity: 0;
-margin-top: 20px;
-}
-
-.list_dsp_true {
-margin:0px;
-opacity: 1;  
-}
-
-
-.list_work {
-  z-index: 1;  
-}
-
-.list_shopping > .col_md_1_list {
-  border-left: 4px solid #e45;
-  color: #e45;
-}
-
-.list_work > .col_md_1_list {
-   border-left: 4px solid #2A476B;
-   color: #2A476B;
-}
-
-.list_sport > .col_md_1_list {
-   border-left: 4px solid #EF8A18;
-   color: #EF8A18;
-}
-
-.list_music > .col_md_1_list {
-   border-left: 4px solid #EE1E65; 
-   color: #EE1E65;
-}
-
-.list_finish_state {
-  opacity: 0.3;
-  margin: 15px 0px;
-  z-index: 1;
-}
-
-/* .user-infor-box h5:hover{
-  cursor: pointer;
-  transform: translateY(-5px);
-
-}
-.user-infor-box{
-  height: 80px;
-  width: auto;
-  right: 180px;
-  top: 20px;
-  display: flex;
-  margin: 30px;
-  justify-content: space-between;
-  flex-direction: row;
-}
-.user-infor-box > h5{
-  height: 50px;
-  width: 140px;
-  background-image: linear-gradient(to right,#32bef8 , #38d39f,#32be8f);
-  padding: 20px;
-  text-align: center;
-  transition: 0.5s ease;
-  border-radius: 5px;
-} */
-
-/* LOGOỦT BTN */
-
-.user-infor-box {
-  position: absolute;
-    /* width: 119px; */
+.form {
+    height: 467px;
+    position: relative;
     width: 25%;
-    padding: 12px;
-    /* margin-right: 500px; */
-    margin-left: 517px;
-    margin-top: 20px;
-    background: linear-gradient(to right, rgba(42,72,107,1) 0%,rgba(80,122,167,1) 100%);
-    color: #fff;
-    font-family: 'Poppins',sans-serif;
+    padding: 1rem;
+    border: 1px solid #f5f9fa;
+    border-radius: 23px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    background: linear-gradient( to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3) );
+    text-align: left;
 }
 
-img {
-  width: 30px;
-  border-radius: 50px;
-  float: left;
+input{
+    padding: 10px;
+    width: 90%;
+    margin-top: 10px;
+    border: 1px solid lightskyblue;
 }
 
-.h5 {
-  font-size: .8em;
-  font-family: 'Oswald', sans-serif;
-	position: relative;
-  right: -18px;
-  bottom: -4px;
-  overflow: hidden;
-  letter-spacing: 3px;
-  /* opacity: 0; */
-  transition: opacity .45s;
-  -webkit-transition: opacity .35s;
-  
-}
-
-.button {
-	border-radius: 12px;
+.login-box {
     position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    padding: 40px;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, .5);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+    border-radius: 10px;
+}
+
+.login-box h2 {
+    margin: 0 0 30px;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+}
+
+.login-box .user-box {
+    position: relative;
+}
+
+.login-box .user-box input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
+}
+
+.login-box .user-box label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.login-box .user-box input:focus~label,
+.login-box .user-box input:valid~label {
+    top: -20px;
+    left: 0;
+    color: #03e9f4;
+    font-size: 12px;
+}
+
+.login-box form a {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #03e9f4;
+    font-size: 16px;
     text-decoration: none;
-    float: right;
-    padding: 12px;
-    margin: 20px;
-    color: white;
-    width: 30px;
-    /* background-color: black; */
-    background: linear-gradient(to right, rgba(42,72,107,1) 0%,rgba(80,122,167,1) 100%);
-    transition: width .35s;
-    -webkit-transition: width .35s;
+    text-transform: uppercase;
     overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 4px
 }
 
-.user-infor-box h5:hover {
-  border-bottom: 1px solid #2A476B;
-  cursor: pointer;
+.login-box a:hover {
+    background: #03e9f4;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4;
 }
 
-.user-infor-box a:hover .logout{
-  opacity: .9;
+.login-box a span {
+    position: absolute;
+    display: block;
 }
 
-.user-infor-box a {
-  text-decoration: none;
+.login-box a span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #03e9f4);
+    animation: btn-anim1 1s linear infinite;
 }
 
+@keyframes btn-anim1 {
+    0% {
+        left: -100%;
+    }
+    50%,
+    100% {
+        left: 100%;
+    }
+}
+
+.login-box a span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #03e9f4);
+    animation: btn-anim2 1s linear infinite;
+    animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+    0% {
+        top: -100%;
+    }
+    50%,
+    100% {
+        top: 100%;
+    }
+}
+
+.login-box a span:nth-child(3) {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #03e9f4);
+    animation: btn-anim3 1s linear infinite;
+    animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+    0% {
+        right: -100%;
+    }
+    50%,
+    100% {
+        right: 100%;
+    }
+}
+
+.login-box a span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #03e9f4);
+    animation: btn-anim4 1s linear infinite;
+    animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+    0% {
+        bottom: -100%;
+    }
+    50%,
+    100% {
+        bottom: 100%;
+    }
+}
+
+.register {
+    position: absolute !important;
+    left: 52%;
+}
+
+span {
+    color: #03e9f4;
+    font-size: 12px;
+}
+
+
+/*index*/
+
+.index {
+    position: relative;
+    width: 70%;
+    height: 500px;
+    /* width: 330px; */
+    border-radius: 30PX;
+    background: linear-gradient( to left top, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5) );
+    box-shadow: 6px 6px 20px rgb(122 122 122 / 21%);
+
+    border: 1px solid #f5f9fa;
+}
+
+.cover {
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap: nowrap; */
+    /* align-content: stretch; */
+    /* justify-content: flex-start; */
+    align-items: stretch;
+}
+
+.header {
+    display: flex;
+    /* flex-direction: row; */
+    /* align-content: center; */
+    justify-content: center;
+}
+
+.topic {
+    text-align: center;
+}
+
+.topic h1 {
+    margin-top: 35px;
+    color: white;
+    font-size: 55px;
+}
+
+.mb-3 label {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.action {
+    margin-top: 15px;
+    align-self: center;
+    padding: 10px;
+    width: 76%;
+    text-align: center;
+
+    display: block;
+    margin-top: 6px
+}
+
+.action button {
+    width: 100%;
+    color: #fff;
+    border-radius: 20px;
+    padding: 10px;
+    border: 1px solid lightskyblue;
+    background-image: linear-gradient(to right,#32bef8 , #38d39f,#32be8f);
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.action button:hover {
+    transform: scaleY(-5px);
+}
+
+.btn-delete {
+    background-color: red;
+    color: #000;
+    margin-left: 15px;
+
+}
+
+.btn-edit {
+    background-color: yellow;
+    color: #000;
+}
+
+.btn-edit,
+.btn-delete {
+    padding: 10px;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    
+}
+
+.btn-lg {
+    position: absolute;
+    top: 29px;
+    right: 38px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid lightskyblue;
+    background-image: linear-gradient(to right,#32bef8 , #38d39f,#32be8f);
+    font-weight: bold;
+    cursor: pointer;
+    color: #fff;
+}
+
+table,
+th,
+td {
+    border: 1px solid rgb(238, 232, 232);
+}
+
+
+/*register*/
+
+
+/*admin*/
+
+
+/*pagination*/
+
+#paging {
+    margin-top: 30px;
+    padding-bottom: 15px;
+}
+
+#paging ul {
+    list-style: none;
+    display: flex;
+}
+
+#paging a {
+    text-decoration: none;
+}
+
+#paging a:hover {
+    color: tomato;
+}
+
+#paging .paginationjs-page,
+.paginationjs-ellipsis {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border: 1px solid white;
+    text-align: center;
+}
+
+#paging .paginationjs-page a,
+#paging .paginationjs-prev a,
+#paging .paginationjs-next a {
+    color: white !important;
+}
+
+#paging .paginationjs-prev,
+#paging .paginationjs-next {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border: 1px solid white;
+    text-align: center;
+}
+
+textarea {
+    padding: 10px;
+    height: 60px;
+    width: 211px;
+    border: 1px solid lightskyblue;
+}
+select#status {
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    border: 1px solid lightskyblue;
+    display: block;
+    margin-top: 6px;
+    cursor: pointer;
+}
+
+h1 {
+    text-align: center;
+    padding: 30px;
+}
+
+tbody {
+    background: linear-gradient( to left top, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5) );
+}
+
+table, th, td {
+    padding: 10px 18px;
+    background: linear-gradient( to left top, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
+    border: none;
+}
+
+div#view-user {
+    width: 69%;
+    margin-left: 14px;
+}
